<?xml version="1.0"?>
<package format="2">
  <name>latency_tests</name>
  <version>0.0.1</version>
  <description>Nodelet pub/forwarder/subscriber pipeline for ROS 1 Noetic transport latency comparison</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>pluginlib</depend>
  <depend>latency_tests_msgs</depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>

  <export>
    <nodelet plugin="${prefix}/nodelets.xml"/>
  </export>
</package>
